# PrivLR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
IDASH2017-master/: README.md
IDASH2017-master/IDASH2017/: .cproject  log.txt
IDASH2017-master/IDASH2017/data/: MNISTt10k3(+1)8(-1)with14x14.csv  MNISTtrain3(+1)8(-1)with14x14x1579.csv  PythonExperiment_Adagradvs.AdagradG_data103x1579_MLE.csv  PythonExperiment_Adagradvs.AdagradG_edin_MLE.csv  PythonExperiment_Adagradvs.AdagradG_lbw_MLE.csv  PythonExperiment_Adagradvs.AdagradG_nhanes3_MLE.csv  PythonExperiment_Adagradvs.AdagradG_pcs_MLE.csv  PythonExperiment_Adagradvs.AdagradG_uis_MLE.csv  PythonExperiment_NAGvs.NAGG_data103x1579_MLE.csv  PythonExperiment_NAGvs.NAGG_edin_MLE.csv  PythonExperiment_NAGvs.NAGG_lbw_MLE.csv  PythonExperiment_NAGvs.NAGG_nhanes3_MLE.csv  PythonExperiment_NAGvs.NAGG_pcs_MLE.csv  PythonExperiment_NAGvs.NAGG_uis_MLE.csv  README.md  data103x1579foreFourFifths.txt  data103x1579rearOneFifth.txt  edin.txt  idash18x1579.txt  lbw.txt  nhanes3.txt  pcs.txt  test.txt  uis.txt
IDASH2017-master/IDASH2017/lib/include/NTL/: 123.cpp
IDASH2017-master/IDASH2017/src/: .cproject  CipherGD.cpp  CipherGD.h  GD.cpp  GD.h  IDASH2017.cpp  TestGD.cpp  TestGD.h  drawresult.py  plot2xaxx.py
include/: logistic-bfv.h  logistic-elgamal.h  logistic-paillier.h  logistic.h  party.h  utils.h
include/protocols/: linear-bfv.h  linear-elgamal.h  linear-paillier.h  linear.h  non-linear-bfv.h  non-linear-elgamal.h  non-linear-paillier.h  non-linear.h  protocol-bfv.h  protocol-elgamal.h  protocol-paillier.h  protocol.h
include/utils/: bfv-tools.h  data.h  ec-elgamal.h  ec-elgamal.hpp  fixed-point.h  io.h  paillier.h  time-count.h
src/: CMakeLists.txt  logistic-bfv.cpp  logistic-elgamal.cpp  logistic-paillier.cpp  logistic.cpp
src/protocols/: CMakeLists.txt  linear-bfv.cpp  linear-elgamal.cpp  linear-paillier.cpp  linear.cpp  non-linear-bfv.cpp  non-linear-paillier.cpp  non-linear.cpp
src/utils/: CMakeLists.txt  bfv-tools.cpp  data.cpp  ec-elgamal.c  fixed-point.cpp  io.cpp  paillier.cpp
test/: CMakeLists.txt  fixed-point_test.cpp  io_test.cpp  linear-bfv_test.cpp  linear-elgamal_test.cpp  linear-paillier_test.cpp  linear_test.cpp  logistic-bfv_test.cpp  logistic-bfvbfv_test.cpp  logistic-paillier_test.cpp  logistic_test.cpp  non-linear-bfv_test.cpp  non-linear-paillier_test.cpp  non-linear_test.cpp  paillier_test.cpp
